[WIP] some optimizations around use of German strings